# apm

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .panel-diff-rest.txt  .panel-diff-src.txt  .panel-diff.txt  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  AUTHORS  CHANGELOG.md  CLAUDE.md  CONFORMANCE.json  CONFORMANCE.md  CONTRIBUTING.md  NOTICE  PRINCIPLES.md  README.md  apm.lock.yaml  apm.yml  daily-test-improver.md  devcontainer.json  install.ps1  install.sh  marketplace.json  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  state.json
.apm/: docs-index.yml
.apm/agents/: apm-primitives-architect.agent.md  auth-expert.agent.md  editorial-owner.agent.md  python-architect.agent.md  spec-pkgmgr-editor.agent.md  test-coverage-expert.agent.md  visual-communicator.agent.md
.apm/instructions/: architecture.instructions.md  cicd.instructions.md  contributing.instructions.md  tests.instructions.md
.apm/prompts/: batch-bug-shepherd.prompt.md
.codex/: config.toml
.cursor/: mcp.json
.devcontainer/: devcontainer.json
.github/: AGENTS.md  CLAUDE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: apm-ceo.agent.md  devx-ux-expert.agent.md  oss-growth-hacker.agent.md  performance-expert.agent.md  python-architect.agent.md  spec-oci-editor.agent.md  spec-swagger-editor.agent.md  supply-chain-security-expert.agent.md  test-coverage-expert.agent.md
.github/aw/: actions-lock.json
.github/instructions/: architecture.instructions.md  cicd.instructions.md  cli.instructions.md
.github/workflows/: auth-acceptance.yml  build-release.yml  ci-integration.yml  ci-runtime.yml  ci.yml  cli-consistency-checker.lock.yml  copilot-setup-steps.yml  crlf-invariance.yml  daily-doc-updater.lock.yml  devcontainer-feature-test.yml  docs-sync.lock.yml  docs-sync.md  docs.yml  merge-gate.yml  mutation-pilot.yml  notice-drift.yml  perf-scan.lock.yml  perf-scan.md  pr-review-panel.lock.yml  pr-review-panel.md  project-sync.yml  spec-conformance.yml  triage-panel.lock.yml  triage-panel.md  verify-shared-apm-matrix.yml  watchdog-stuck-prs.yml  windows-ssh-conpty-repro.yml  windows-ssh-passphrase-repro.yml
devcontainer/: README.md  feature-overview.md
devcontainer-feature/: feature-overview.md
devcontainer/docs/: 01-feature-717.md  02-unit-test-info.md  03-integration-test-info.md
devcontainer/scripts/: sync-local-devcontainer.sh
docs/: astro.config.mjs  dependencies.md  index.md  manifest-schema.md  package-lock.json  package.json  plugins.md
docs/proposals/: registry-api-summary.md  registry-api.md  registry-http-api.md
docs/scripts/: check-links.mjs  check-links.test.mjs
docs/src/: AGENTS.md  CLAUDE.md
scripts/: bootstrap_requirements.py  check_cleanup_claim_owner.py  check_cli_docs.py  check_deployment_owner_boundaries.py  check_diagnostic_ascii_owner.py  check_exact_test_duplicates.py  check_hook_config_write_owner.py  check_hook_file_routing_owner.py  check_repository_cache_identity_owner.py  check_schema_ids.py  check_skill_subset_owner.py  check_target_instruction_contraction_owner.py  check_test_assertions.py  check_test_contract_authorities.py  check_windows_stable_path_owner.py  coverage-summary.py  crlf_invariance_probe.py  generate-notice.py  lint-architecture-boundaries.sh  lint-auth-signals.sh  lint-bootstrap-project-name.py  notice-metadata.yaml  npm_publish.py  ratchet_baseline.py  run_mutation_pilot.py  test-dependency-integration.sh  test-integration.sh  test-release-validation.sh  test_file_inventory.py
scripts/e2e/: marketplace_local_e2e.sh
scripts/perf/: measure_dotnet_skills.py
scripts/project/: README.md  backfill.sh  sync_item.py
scripts/runtime/: setup-codex.ps1  setup-codex.sh  setup-common.ps1  setup-llm.ps1  setup-llm.sh
scripts/windows/: test-dependency-integration.ps1  test-install-script.ps1  test-integration.ps1  test-release-validation.ps1  test-ssh-conpty-passphrase.ps1  test-ssh-passphrase-fixture.ps1
src/apm_cli/: AGENTS.md  CLAUDE.md  bootstrap_mirror.py  cli.py  config.py  constants.py  context_discovery.py  drift.py  factory.py  update_policy.py  version.py
templates/: apm-policy-starter.yml
templates/hello-world/: apm.yml
tests/: AGENTS.md  CLAUDE.md  basic_workflow_test.py  conftest.py  manual_workflow_script.py  test_apm_package_models.py  test_apm_resolver.py  test_codex_docker_args_fix.py  test_codex_empty_string_and_defaults.py  test_console.py  test_distributed_compilation.py  test_empty_string_and_defaults.py  test_enhanced_discovery.py  test_github_downloader.py  test_github_downloader_token_precedence.py  test_gitlab_git_transport.py  test_lockfile.py  test_runnable_prompts.py  test_runtime_manager_token_precedence.py  test_token_manager.py  test_virtual_package_multi_install.py  workflow_contracts.py
tests/acceptance/: test_logging_acceptance.py
tests/benchmarks/: run_baseline.py  test_audit_benchmarks.py  test_compilation_hot_paths.py  test_git_and_compiler_benchmarks.py  test_install_hot_paths.py  test_lookup_and_cache_benchmarks.py  test_perf_benchmarks.py  test_scaling_guards.py  test_security_and_resolver_benchmarks.py
tests/fixtures/: synthetic_trees.py
tests/integration/: _tls_ca_server.py  conftest.py  release_homebrew_update_harness.py  test_ado_bearer_e2e.py  test_ado_e2e.py  test_ado_lock_consumer_contract.py  test_ado_marketplace_check_auth.py  test_ado_marketplace_e2e.py  test_ado_preflight_bearer_fallback_e2e.py  test_ado_ref_resolution_fallback.py  test_agent_skills_target.py  test_anonymous_https_git_suffix_e2e.py  test_apm_dependencies.py  test_apm_lifecycle_runner_contract.py  test_apply_to_comma_e2e.py  test_architecture_authorities.py  test_architecture_contract_guards.py  test_architecture_intent_guards.py  test_architecture_io_guards.py  test_architecture_mutation_guards.py  test_architecture_outcome_guards.py  test_artifact_snapshot_contract.py  test_artifactory_install_e2e.py  test_artifactory_probe_pipeline_e2e.py  test_audit_coverage.py  test_audit_phase3w4.py  (+264 more)
(+2437 files in other folders)
